# django-dummy-database

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
dummy_database/: base.py
